# elements_of_computing_systems

./: .gitignore  Makefile  README.md  go.mod  pyproject.toml
projects/ch01/: And.hdl  And16.hdl  DMux.hdl  DMux4Way.hdl  DMux8Way.hdl  Mux.hdl  Mux16.out  Mux4Way16.hdl  Mux8Way16.hdl  Not16.hdl  Or.hdl  Or8Way.hdl  README.md  Xor.hdl
projects/ch02/: Add16.hdl  FullAdder.hdl  README.md
