[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"

[tool.poetry.group.dev.dependencies]
ruff = "~0.4.6"
mypy = "~1.10.0"

[tool.ruff]
target-version = 'py312'

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
extend-select = ["I"]

[tool.mypy]
python_version = "3.12"
# enables all optional error checking flags
strict = true
# disallows defining functions without type annotations
disallow_untyped_defs = true
# suppresses errors about missing imports from third-party libraries
ignore_missing_imports = true
# warns about unnecessary `cast` operations
warn_redundant_casts = true
# warns if a function returns a value with type `Any`
warn_return_any = true
# warns about code that is syntactically unreachable
warn_unreachable = true
# supports PEP 420-style namespace packages
namespace_packages = true
# determines how mypy handles imports (follows all imports and type checks them)
follow_imports = "normal"
# enables pretty-printed output for error messages
pretty = true

[tool.poetry.scripts]
assembler = 'projects.assembler:main'
compiler = 'projects.compiler:main'